Modernizr fixes